--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -50,6 +50,6 @@ jobs:
           .sonar/scanner/dotnet-sonarscanner begin /k:"tuan-pham-9207_test-repo" /o:"tuan-pham-9207" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
         
           # Replace the following with your actual build command
-          dotnet build --configuration Release
+          dotnet build --configuration Release ./WebApplication1
           
           .sonar/scanner/dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
